# shadekit

./: README.md  pyproject.toml
.github/workflows/: publish.yml
ombra/: __init__.py
ombra/ast/: __init__.py  _block.py  _expressions.py  _statements.py
ombra/compiler/: __init__.py  _ast_walk.py  _cache.py  _dce.py  _dependency_graph.py  _optimizer.py
ombra/decorators/: __init__.py  _function.py
ombra/glsl/: __init__.py  _assembler.py  _builder.py  _builtins.py  _emitter.py  _function_emitter.py  _program.py  _validation.py
ombra/types/: __init__.py  _base.py  _inference.py  _matrices.py  _samplers.py  _structs.py
shadekit/: __init__.py
shadekit/ast/: __init__.py  _block.py  _expressions.py  _statements.py
shadekit/compiler/: __init__.py  _ast_walk.py  _cache.py  _dce.py  _dependency_graph.py  _optimizer.py
shadekit/decorators/: __init__.py  _function.py
shadekit/glsl/: __init__.py  _assembler.py  _builder.py  _builtins.py  _emitter.py  _function_emitter.py  _program.py  _validation.py
shadekit/types/: __init__.py  _arrays.py  _base.py  _scalars.py  _structs.py  _vectors.py
tests/: test_ast.py  test_compute.py  test_decorators.py  test_glsl_features.py  test_optimization.py  test_program.py  test_transitive_deps.py  test_types.py  test_version_handling.py
