[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ombra"
version = "0.1.0"
description = "Python shader composition library with GLSL backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["ombra"]

[tool.ruff]
target-version = "py312"
